now using json for ip_loc

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@ lib_deps = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
     codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
     codewitch-honey-crisis/htcw_bm8563 ; real time clock
     codewitch-honey-crisis/htcw_uix ; UI and Graphics
+    codewitch-honey-crisis/htcw_json ; web services
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
@@ -30,6 +31,7 @@ lib_deps =
     codewitch-honey-crisis/htcw_chsc6540
     codewitch-honey-crisis/htcw_bm8563
     codewitch-honey-crisis/htcw_uix
+    codewitch-honey-crisis/htcw_json
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
