fixed ini. cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
     -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 upload_port = COM10
 monitor_port = COM10
 
@@ -36,5 +37,6 @@ build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
     -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
 upload_port = COM20
 monitor_port = COM20
