temporarily removed tough support. added esp-idf support

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,22 @@
 [env:m5stack-core2]
 platform = espressif32
 board = m5stack-core2
+board_build.partitions = no_ota.csv
 framework = arduino
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
+lib_ldf_mode = deep
 lib_deps = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
+    codewitch-honey-crisis/htcw_esp_i2c ; i2c init
     codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
-    codewitch-honey-crisis/htcw_bm8563 ; real time clock
     codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
     codewitch-honey-crisis/htcw_uix ; UI and Graphics
-    codewitch-honey-crisis/htcw_json ; web services
+    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
+    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
+    codewitch-honey-crisis/htcw_bm8563 ; real time clock
+    
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
@@ -19,24 +25,29 @@ build_flags= -DM5STACK_CORE2
 upload_port = COM10
 monitor_port = COM10
 
-[env:m5stack-tough]
+[env:m5stack-core2-esp-idf]
 platform = espressif32
 board = m5stack-core2
-framework = arduino
+board_build.partitions = no_ota.csv
+framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps =
-    codewitch-honey-crisis/htcw_m5tough_power
-    codewitch-honey-crisis/htcw_chsc6540
-    codewitch-honey-crisis/htcw_bm8563
-    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342
-    codewitch-honey-crisis/htcw_uix
-    codewitch-honey-crisis/htcw_json
+lib_deps = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
+    codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+    codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
+    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
+    codewitch-honey-crisis/htcw_uix ; UI and Graphics
+    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
+    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
+    codewitch-honey-crisis/htcw_bm8563 ; real time clock
+    
 build_unflags = -std=gnu++11
-build_flags= -DM5STACK_TOUGH
+build_flags= -DM5STACK_CORE2
     -std=gnu++17
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
-upload_port = COM20
-monitor_port = COM20
+upload_port = COM10
+monitor_port = COM10
+
