--- a/platformio.ini
+++ b/platformio.ini
@@ -51,3 +51,56 @@ build_flags= -DM5STACK_CORE2
 upload_port = COM10
 monitor_port = COM10
 
+[env:m5stack-tough]
+platform = espressif32
+board = m5stack-core2
+board_build.partitions = no_ota.csv
+framework = arduino
+upload_speed=921600
+monitor_speed=115200
+monitor_filters = esp32_exception_decoder
+lib_ldf_mode = deep
+lib_deps = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
+    codewitch-honey-crisis/htcw_uix ; UI and Graphics
+    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
+    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
+    codewitch-honey-crisis/htcw_bm8563 ; real time clock
+    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+    codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
+
+build_unflags = -std=gnu++11
+build_flags= -DM5STACK_TOUGH
+    -std=gnu++17
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+upload_port = COM20
+monitor_port = COM20
+
+[env:m5stack-tough-esp-idf]
+platform = espressif32
+board = m5stack-core2
+board_build.partitions = no_ota.csv
+framework = espidf
+upload_speed=921600
+monitor_speed=115200
+monitor_filters = esp32_exception_decoder
+lib_deps = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
+    codewitch-honey-crisis/htcw_uix ; UI and Graphics
+    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
+    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
+    codewitch-honey-crisis/htcw_bm8563 ; real time clock
+    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+    codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
+    
+    
+build_unflags = -std=gnu++11
+build_flags= -DM5STACK_TOUGH
+    -std=gnu++17
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+upload_port = COM20
+monitor_port = COM20
