fixed core2 partition tables, flash mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,8 @@
 [env:m5stack-core2]
 platform = espressif32
 board = m5stack-core2
-board_build.partitions = no_ota.csv
+board_build.flash_mode = qio
+board_build.partitions = 16MB.csv
 framework = arduino
 upload_speed=921600
 monitor_speed=115200
@@ -27,7 +28,8 @@ monitor_port = COM10
 [env:m5stack-core2-esp-idf]
 platform = espressif32
 board = m5stack-core2
-board_build.partitions = no_ota.csv
+board_build.flash_mode = qio
+board_build.partitions = 16MB.csv
 framework = espidf
 upload_speed=921600
 monitor_speed=115200
