fixed tough partition tables, flash mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -54,7 +54,8 @@ monitor_port = COM10
 [env:m5stack-tough]
 platform = espressif32
 board = m5stack-core2
-board_build.partitions = no_ota.csv
+board_build.flash_mode = qio
+board_build.partitions = 16MB.csv
 framework = arduino
 upload_speed=921600
 monitor_speed=115200
@@ -80,7 +81,8 @@ monitor_port = COM20
 [env:m5stack-tough-esp-idf]
 platform = espressif32
 board = m5stack-core2
-board_build.partitions = no_ota.csv
+board_build.flash_mode = qio
+board_build.partitions = 16MB.csv
 framework = espidf
 upload_speed=921600
 monitor_speed=115200
