fixed flash frequency

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [env:m5stack-core2]
 platform = espressif32
 board = m5stack-core2
+board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 board_build.partitions = 16MB.csv
 framework = arduino
@@ -29,6 +30,7 @@ monitor_port = COM10
 platform = espressif32
 board = m5stack-core2
 board_build.flash_mode = qio
+board_build.f_flash = 80000000L
 board_build.partitions = 16MB.csv
 framework = espidf
 upload_speed=921600
@@ -55,6 +57,7 @@ monitor_port = COM10
 platform = espressif32
 board = m5stack-core2
 board_build.flash_mode = qio
+board_build.f_flash = 80000000L
 board_build.partitions = 16MB.csv
 framework = arduino
 upload_speed=921600
@@ -81,6 +84,7 @@ monitor_port = COM20
 [env:m5stack-tough-esp-idf]
 platform = espressif32
 board = m5stack-core2
+board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 board_build.partitions = 16MB.csv
 framework = espidf
