--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,14 @@
+[common]
+core2_com_port = COM10
+tough_com_port = COM20
+lib_deps_external = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
+    codewitch-honey-crisis/htcw_uix ; UI and Graphics
+    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
+    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
+    codewitch-honey-crisis/htcw_bm8563 ; real time clock
+    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+
 [env:m5stack-core2]
 platform = espressif32
 board = m5stack-core2
@@ -9,22 +20,16 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
-lib_deps = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+lib_deps = ${common.lib_deps_external}
+    codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
     codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
-    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
-    codewitch-honey-crisis/htcw_uix ; UI and Graphics
-    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
-    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
-    codewitch-honey-crisis/htcw_bm8563 ; real time clock
-    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
-upload_port = COM10
-monitor_port = COM10
+upload_port = ${common.core2_com_port}
+monitor_port = ${common.core2_com_port}
 
 [env:m5stack-core2-esp-idf]
 platform = espressif32
@@ -36,22 +41,16 @@ framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+lib_deps = ${common.lib_deps_external}
+    codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
     codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
-    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
-    codewitch-honey-crisis/htcw_uix ; UI and Graphics
-    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
-    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
-    codewitch-honey-crisis/htcw_bm8563 ; real time clock
-    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
-upload_port = COM10
-monitor_port = COM10
+    -DCONFIG_SPIRAM_CACHE_WORKAROUND
+upload_port = ${common.core2_com_port}
+monitor_port = ${common.core2_com_port}
 
 [env:m5stack-tough]
 platform = espressif32
@@ -64,22 +63,16 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
-lib_deps = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
-    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
-    codewitch-honey-crisis/htcw_uix ; UI and Graphics
-    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
-    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
-    codewitch-honey-crisis/htcw_bm8563 ; real time clock
-    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+lib_deps = codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
     codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    ${common.lib_deps_external}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
     -DBOARD_HAS_PSRAM
     -mfix-esp32-psram-cache-issue
-upload_port = COM20
-monitor_port = COM20
+upload_port = ${common.tough_com_port}
+monitor_port = ${common.tough_com_port}
 
 [env:m5stack-tough-esp-idf]
 platform = espressif32
@@ -91,19 +84,13 @@ framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
-    codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
-    codewitch-honey-crisis/htcw_uix ; UI and Graphics
-    codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
-    codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
-    codewitch-honey-crisis/htcw_bm8563 ; real time clock
-    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+lib_deps = codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
     codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+    ${common.lib_deps_external}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
     -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
-upload_port = COM20
-monitor_port = COM20
+    -DCONFIG_SPIRAM_CACHE_WORKAROUND
+upload_port = ${common.tough_com_port}
+monitor_port = ${common.tough_com_port}
