--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [common]
 core2_com_port = COM10
 tough_com_port = COM20
+
 lib_deps_external = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
     codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
     codewitch-honey-crisis/htcw_uix ; UI and Graphics
@@ -8,6 +9,12 @@ lib_deps_external = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
     codewitch-honey-crisis/htcw_esp_ntp_time ; NTP time service
     codewitch-honey-crisis/htcw_bm8563 ; real time clock
     codewitch-honey-crisis/htcw_esp_ip_loc ; IP geolocation
+
+lib_deps_core2 = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
+    codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
+
+lib_deps_tough = codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
+    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
 
 [env:m5stack-core2]
 platform = espressif32
@@ -21,8 +28,7 @@ monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
 lib_deps = ${common.lib_deps_external}
-    codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
+    ${common.lib_deps_core2}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
@@ -42,8 +48,7 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_deps = ${common.lib_deps_external}
-    codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
+    ${common.lib_deps_core2}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
     -std=gnu++17
@@ -63,9 +68,8 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
-lib_deps = codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
-    codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
-    ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_external}
+    ${common.lib_deps_tough}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
@@ -84,9 +88,8 @@ framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps = codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
-    codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
-    ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_external}
+    ${common.lib_deps_tough}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
     -std=gnu++17
