--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 core2_com_port = COM10
 tough_com_port = COM20
 
-lib_deps_external = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
+lib_deps_shared = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
     codewitch-honey-crisis/htcw_esp_lcd_panel_ili9342 ; screen
     codewitch-honey-crisis/htcw_uix ; UI and Graphics
     codewitch-honey-crisis/htcw_esp_wifi_manager ; wifi
@@ -27,7 +27,7 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
-lib_deps = ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_shared}
     ${common.lib_deps_core2}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
@@ -47,7 +47,7 @@ framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps = ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_shared}
     ${common.lib_deps_core2}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_CORE2
@@ -68,7 +68,7 @@ upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
 lib_ldf_mode = deep
-lib_deps = ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_shared}
     ${common.lib_deps_tough}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
@@ -88,7 +88,7 @@ framework = espidf
 upload_speed=921600
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
-lib_deps = ${common.lib_deps_external}
+lib_deps = ${common.lib_deps_shared}
     ${common.lib_deps_tough}
 build_unflags = -std=gnu++11
 build_flags= -DM5STACK_TOUGH
