--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ lib_deps_shared = codewitch-honey-crisis/htcw_esp_i2c ; i2c init
 lib_deps_core2 = codewitch-honey-crisis/htcw_m5core2_power ; AXP192 power chip
     codewitch-honey-crisis/htcw_ft6336 ; touch screen panel
 
-lib_deps_tough = codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
-    codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+lib_deps_tough = codewitch-honey-crisis/htcw_chsc6540 ; touch screen panel
+    codewitch-honey-crisis/htcw_m5tough_power ; AXP192 power chip
 
 [env:m5stack-core2]
 platform = espressif32
